--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AL_Doodler"
         tools:targetApi="31">
+        <activity
+            android:name=".ListFilesAct"
+            android:exported="false"
+            android:label="@string/title_activity_list_files"
+            android:theme="@style/Theme.AL_Doodler" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
